# noyau

./: .bzrignore  .gitignore  AUTHORS  BUILD_CONFIG  INSTALL  README.md  build-deb.sh  build-pbuilder.sh  meson.build  ukuu.pot
data/: appdata.xml  com.github.joshuadowding.noyau.appdata.xml  com.github.joshuadowding.noyau.desktop  com.github.joshuadowding.noyau.pkexec.policy  meson.build  noyau.appdata.xml  noyau.desktop  noyau.pkexec.policy  ukuu.appdata.xml  ukuu.desktop  ukuu.pkexec.policy
data/images/: meson.build
data/pixmaps/: meson.build
debian/: changelog  control  copyright  files  rules
meson/: build-deb.sh  build-source.sh  post_install.py
po/: LINGUAS  POTFILES  es.po  fr.po  hr.po  meson.build  nl.po  noyau.pot  pl.po  ru.po  sv.po  tr.po  ukuu-es.po  ukuu-fr.po  ukuu-hr.po  ukuu-nl.po  ukuu-pl.po  ukuu-ru.po  ukuu-sv.po  ukuu-tr.po  ukuu.pot
release/: sanity.config
release/bionic/amd64/: ukuu-dbgsym_18.10_amd64.ddeb  ukuu_18.10_amd64.buildinfo  ukuu_18.10_amd64.changes  ukuu_18.10_amd64.deb
release/bionic/i386/: ukuu-dbgsym_18.10_i386.ddeb  ukuu_18.10_i386.buildinfo  ukuu_18.10_i386.changes  ukuu_18.10_i386.deb
release/disco/amd64/: ukuu-dbgsym_18.10_amd64.ddeb  ukuu_18.10_amd64.buildinfo  ukuu_18.10_amd64.changes  ukuu_18.10_amd64.deb
release/disco/i386/: ukuu-dbgsym_18.10_i386.ddeb  ukuu_18.10_i386.buildinfo  ukuu_18.10_i386.changes  ukuu_18.10_i386.deb
release/xenial/amd64/: ukuu_18.10_amd64.changes  ukuu_18.10_amd64.deb
release/xenial/i386/: ukuu_18.10_i386.changes  ukuu_18.10_i386.deb
src/: App.vala  Consts.vala  LinuxKernel.vala  makefile  meson.build
src/Common/: DownloadManager.vala  LinuxKernel.vala  Main.vala  Package.vala
src/Console/: AppConsole.vala
src/Gtk/: AboutWindow.vala  AppGtk.vala  CustomMessageDialog.vala  MainWindow.vala  ProgressWindow.vala  SettingsDialog.vala  TerminalWindow.vala  UpdateNotificationDialog.vala  UpdateNotificationWindow.vala  VersionMessageWindow.vala
src/Helpers/: DownloadHelper.vala  FileHelper.vala  GtkHelper.vala  JsonHelper.vala  LoggingHelper.vala  MiscHelper.vala  ProcessHelper.vala  SystemHelper.vala
src/Models/: AsyncTask.vala  DownloadItem.vala  LinuxKernel.vala  OSDNotify.vala  Package.vala  Version.vala
src/Utility/: AppLock.vala  AsyncTask.vala  JsonHelper.vala  OSDNotify.vala  TeeJee.FileSystem.vala  TeeJee.Json.vala  TeeJee.JsonHelper.vala  TeeJee.Logging.vala  TeeJee.Misc.vala  TeeJee.Process.vala  TeeJee.System.vala  Version.vala
src/Utility/Gtk/: AboutWindow.vala  CustomMessageDialog.vala  GtkHelper.vala
src/Views/: AboutWindow.vala  MainWindow.vala  ProgressWindow.vala  SettingsDialog.vala  TerminalWindow.vala  UpdateNotificationDialog.vala
