install_data(
    'ukuu.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications'),
    install: true
)

install_data(
    'ukuu.appdata.xml',
    install_dir: join_paths(get_option('datadir'), 'metainfo'),
    install: true
)

install_data(
    'ukuu.pkexec.policy',
    install_dir: '/usr/share/polkit-1/actions/',
    install: true
)

subdir('images')
subdir('pixmaps')

