install_data(
    'noyau.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications'),
    install: true
)

install_data(
    'noyau.appdata.xml',
    install_dir: join_paths(get_option('datadir'), 'metainfo'),
    install: true
)

install_data(
    'noyau.pkexec.policy',
    install_dir: join_paths(get_option('datadir'), 'polkit-1', 'actions'),
    install: true
)

subdir('images')
subdir('pixmaps')
