install_data(
    'tux.png',
    install_dir: join_paths(get_option('datadir'), 'ukuu', 'images')
)

install_data(
    'tux-red.png',
    install_dir: join_paths(get_option('datadir'), 'ukuu', 'images')
)

install_data(
    'ubuntu-logo.png',
    install_dir: join_paths(get_option('datadir'), 'ukuu', 'images')
)

install_data(
    'ukuu.png',
    install_dir: join_paths(get_option('datadir'), 'ukuu', 'images')
)


install_data(
    'ukuu.svg',
    install_dir: join_paths(get_option('datadir'), 'ukuu', 'images')
)

