install_data(
    'tux.png',
    install_dir: join_paths(get_option('datadir'), 'noyau', 'images'),
    install: true
)

install_data(
    'tux-red.png',
    install_dir: join_paths(get_option('datadir'), 'noyau', 'images'),
    install: true
)

install_data(
    'ubuntu-logo.png',
    install_dir: join_paths(get_option('datadir'), 'noyau', 'images'),
    install: true
)

install_data(
    'noyau.png',
    install_dir: join_paths(get_option('datadir'), 'noyau', 'images'),
    install: true
)

install_data(
    'noyau.svg',
    install_dir: join_paths(get_option('datadir'), 'noyau', 'images'),
    install: true
)
